<?xml version="1.0"?>
<package>
  <name>ros_joystick_reading_data</name>
  <version>1.0.0</version>
  <description>The ros_joystick_reading_data package</description>
  <license>BSD</license>
  <maintainer email="behnam.asadi@gmail.com">Behnam Asadi</maintainer>


  <buildtool_depend>catkin</buildtool_depend>

 


  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
